# praam-platform

./: .env.example  .env.secrets.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  services.yaml
.cursor/rules/: praam-suite-layers.mdc
.github/workflows/: ci.yml
config/: litellm.yaml
docs/: CONFIG_API.md  PLATFORM_PLAN.md  PRODUCTION_LAYERS.md  SCHEMA_MIGRATIONS.md  STATUS.md  SUITE_LAYERS.md
infra/postgres/init/: 01-schemas.sql
lib/praam_platform/: __init__.py  client.py  config.py  enums.py  exceptions.py  health.py  logging.py  paths.py  ratelimit.py  registry.py  secrets.py  settings.py  validate.py
make/v1/: platform.mk
scripts/v1/: _services.py  backup-db.sh  bootstrap.sh  clean-legacy-env.sh  config-smoke.py  doctor.sh  render-env.sh  sdk.py  verify-schema.sh
sdk/: README.md
sdk/python/: README.md
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
services/platform-config/: Dockerfile
services/platform-config/app/: main.py  middleware.py
tests/: conftest.py  test_all_apps.py  test_client.py  test_config_api.py  test_sdk.py  test_secrets.py  test_services.py  test_validate.py
