[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "praam-platform"
version = "1.1.0"
description = "Runtime config client for the Praam local platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
]
aws = [
  "boto3>=1.34",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["lib"]
include = ["praam_platform*"]

[tool.uv]
default-groups = ["dev"]
